<?xml version="1.0"?>
<package>
  <name>tactile_feedback_quadcopter_ros</name>
  <version>0.0.1</version>
  <description>Package used to give tactile feedback about obstacles detected from the quadcopter</description>

  <maintainer email="stefan.spiss@student.uibk.ac.at">Stefan Spiss</maintainer>
  <license>BSD</license>
  <author email="stefan.spiss@students.uibk.ac.at">Stefan Spiss</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>ardrone_autonomy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>